--- a/templates/Pagina_comprar-produto.html
+++ b/templates/Pagina_comprar-produto.html
@@ -1,161 +1,152 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ZCG-GAME-STORE</title>
+    <!DOCTYPE html>
+    <html lang="pt-br">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>ZCG-GAME-STORE</title>
 
-    <!-- links externo -->
+        <!-- links externo -->
 
-        <!-- Link CSS Bootstrap via CDN -->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
+            <!-- Link CSS Bootstrap via CDN -->
+            <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
 
-        <!-- Link CSS Bootstrap via CDN -->
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
+            <!-- Link CSS Bootstrap via CDN -->
+            <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
 
-        <!-- Link JS Bootstrap via CDN -->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" defer></script>
+            <!-- Link JS Bootstrap via CDN -->
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" defer></script>
 
 
-    <!-- links interno -->
+        <!-- links interno -->
 
-        <!-- CSS -->
-        <link rel="stylesheet" href="{{ url_for('static', filename='styles/style-pagina_comprar_produtos.css') }}">
-        <link rel="stylesheet" href="{{url_for('static', filename='styles/style-cores_das_paginas.css')}}">
+            <!-- CSS -->
+            <link rel="stylesheet" href="{{ url_for('static', filename='styles/style-pagina_comprar_produtos.css') }}">
+            <link rel="stylesheet" href="{{url_for('static', filename='styles/style-cores_das_paginas.css')}}">
 
-</head>
-<body>
-    
-<nav class="navbar bg-dark border-bottom border-body" data-bs-theme="dark">
+    </head>
+    <body>
+        
+    <nav class="navbar bg-dark border-bottom border-body" data-bs-theme="dark">
 
-    <div class="container-fluid">
+        <div class="container-fluid">
 
-        <div class="dropdown">
-            <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false"><i class="bi bi-list"></i></button>
+            <div class="dropdown">
+                <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false"><i class="bi bi-list"></i></button>
 
-            <ul class="dropdown-menu dropdown-menu-dark">
-                <li><a class="dropdown-item active" href="/"><i class="bi bi-house-door-fill"></i></a></li>
-                <li><a class="dropdown-item" href="/categoria-jogos"><i class="bi bi-bookmark"></i></a></li>
-                <li><a class="dropdown-item" href="/apresentacao"><i class="bi bi-question-circle"></i></a></li>
-            </ul>
+                <ul class="dropdown-menu dropdown-menu-dark">
+                    <li><a class="dropdown-item active" href="/"><i class="bi bi-house-door-fill"></i></a></li>
+                    <li><a class="dropdown-item" href="/categoria-jogos"><i class="bi bi-bookmark"></i></a></li>
+                    <li><a class="dropdown-item" href="/apresentacao"><i class="bi bi-question-circle"></i></a></li>
+                </ul>
+                
+            </div>
+
+            <img src="" alt="">
+            <a class="navbar-brand" href="/">ZCG Game Store</a>
+            <form class="d-flex" role="search">
+                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"/>
+                <button class="btn btn-outline-success" type="submit"><i class="bi bi-search"></i></button>
+            </form>
+
+            <a href="#"><i class="bi bi-cart-plus"></i></a>
+
+            <div class="btn-group dropstart">
+                <button type="button" class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false"><i class="bi bi-person-circle"></i></button>
+                <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="#">My Accont</a></li>
+                    <li><a class="dropdown-item" href="#">Login/Register</a></li>
+                    <li><a class="dropdown-item" href="#">Logout</a></li>
+                </ul>
+            </div>
+
+        </div>
+
+    </nav>
+
+    <main class="main">
+
+        <section class="main__produto">
+
+            <img src="{{produto.url}}">
+
+
+            <div class="main__produto-detalhes">
+
+                <form class="main__produto-detalhes-nome">
+
+                    <h1>{{produto.nome_jogo}}</h1>
+
+                </form>
+
+
+                <form class="main__produto-detalhes-descricao">
+
+                    <p>Descrição do Produto</p>
+                    <h2>{{produto.descricao_jogo}}</h2>
+
+                </form>
+
+            </div>
+
+
+            <form class="main__produto-compra">
+
+                <button class="main__produto-compra-comprar">Comprar</button>
+
+                <button class="main__produto-compra-termos">Termos de Compra</button>
             
-        </div>
+            </form>
 
-        <img src="" alt="">
-        <a class="navbar-brand" href="/">ZCG Game Store</a>
-        <form class="d-flex" role="search">
-            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"/>
-            <button class="btn btn-outline-success" type="submit"><i class="bi bi-search"></i></button>
+        </section>
+
+        <section class="main__comentario">
+
+            <div class="main__comentario-container">
+                <form action="/post/comentario/ " method="POST" class="main__comentario-container-input">
+
+                    <label>Comentário</label> 
+                    <textarea name="mensagem"          required></textarea>
+                    <input type="hidden" name="cod_jogo" value={{produto.cod_jogo}}>
+
+                    <div class="main__comentario-container-button">
+                        <button type="submit" class="main__comentario-container-button-publicar">Publicar</button>
+                        <button type="reset" class="main__comentario-container-button-limpar">Limpar</button>
+                    </div>
+
+                </form>
+            </div>
+
+            <div class="main__chat-container">
+                {% for msg in mensagens %}
+                <form class="main__chat-container-usuario">
+                    <span>{{ msg.usuario }}</span>
+                </form>
+
+                <form class="main__container-chat-comentario">
+                    <span>{{ msg.comentario }}</span>
+                </form>
+                {% endfor %}
+            </div>
+
+        </section>
+
+
+    </main>
+
+    <footer class="footer">
+            
+        <span>@ ZCG GAME STORE 2025. Muitos direitos Reservados</span>
+
+        <form class="footer__social">
+
+            <a href="https://www.facebook.com/?locale=pt_BR"><i class="bi bi-facebook"></i></a>
+            <a href="https://www.instagram.com/"><i class="bi bi-instagram"></i></a>
+            <a href="https://br.linkedin.com/"><i class="bi bi-linkedin"></i></a>
+            <a href="https://x.com/"><i class="bi bi-twitter-x"></i></a>
+
         </form>
 
-        <a href="#"><i class="bi bi-cart-plus"></i></a>
+    </footer>
 
-        <div class="btn-group dropstart">
-            <button type="button" class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false"><i class="bi bi-person-circle"></i></button>
-            <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">My Accont</a></li>
-                <li><a class="dropdown-item" href="#">Login/Register</a></li>
-                <li><a class="dropdown-item" href="#">Logout</a></li>
-            </ul>
-        </div>
-
-    </div>
-
-</nav>
-
-<main class="main">
-
-    <section class="main__produto">
-
-        <img src="{{produto.url}}">
-
-
-        <div class="main__produto-detalhes">
-
-            <form class="main__produto-detalhes-nome">
-
-                <h1>{{produto.nome_jogo}}</h1>
-
-            </form>
-
-
-            <form class="main__produto-detalhes-descricao">
-
-                <p>Descrição do Produto</p>
-                <h2>{{produto.descricao_jogo}}</h2>
-
-            </form>
-
-        </div>
-
-
-        <form class="main__produto-compra">
-
-            <button class="main__produto-compra-comprar">Comprar</button>
-
-            <button class="main__produto-compra-termos">Termos de Compra</button>
-        
-        </form>
-
-    </section>
-
-
-    <section class="main__comentario">
-
-        <div class="main__comentario-container">
-    
-            <form class="main__comentario-container-input">
-                
-                <label>Comentário</label>
-                <textarea name="mensagem"></textarea>
-
-            </form>
-
-            <form  action="" class="main__comentario-container-button">
-
-                <button class="main__comentario-container-button-publicar">Publicar</button>
-                
-                <button class="main__comentario-container-button-limpar">Limpar</button>
-
-            </form>
-
-        </div>
-
-
-        <div class="main__chat-container">
-
-            <form class="main__chat-container-usuario">
-
-                <span>nome do usuario</span>
-
-            </form>
-
-            <form class="main__container-chat-comentario">
-
-                <span>Comentario</span>
-
-            </form>
-
-        </div>
-
-    </section>
-
-</main>
-
-<footer class="footer">
-        
-    <span>@ ZCG GAME STORE 2025. Muitos direitos Reservados</span>
-
-    <form class="footer__social">
-
-        <a href="https://www.facebook.com/?locale=pt_BR"><i class="bi bi-facebook"></i></a>
-        <a href="https://www.instagram.com/"><i class="bi bi-instagram"></i></a>
-        <a href="https://br.linkedin.com/"><i class="bi bi-linkedin"></i></a>
-        <a href="https://x.com/"><i class="bi bi-twitter-x"></i></a>
-
-    </form>
-
-</footer>
-
-</body>
-</html>
+    </body>
+    </html>
