--- a/static/styles/style-pagina_comprar_produtos.css
+++ b/static/styles/style-pagina_comprar_produtos.css
@@ -1,17 +1,21 @@
-*{
-
+*
+{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
 
-body {
+body
+{
     background-color: var(--preto);
     color: var(--branco);
+
+    overflow-x: hidden;
 }
 
 /* Formatando todos os botões para um padrão */
-button {
+button
+{
     width: 50px;
     height: 40px;
 
@@ -19,31 +23,35 @@ button {
 }
 
 /* Tirando formatações */
-li {
+li
+{
     list-style-type: none;
     list-style: none;
 }
 
 /* Formatando todos 'a' */
-a {
+a
+{
     color: var(--branco);
     text-decoration: none;
 }
 
-.main {
+.main
+{
     width: 100%;
-    height: 100vh;
+    height: 140vh;
 
     display: flex;
     flex-direction: column;
     gap: 20px;
 }
 
-.main__produto {
+.main__produto
+{
     width: 100%;
     height: 50%;
 
-    margin-bottom: 20px;
+    margin: 20px;
 
     display: flex;
     flex-direction: row;
@@ -53,9 +61,10 @@ a {
 
 }
 
-.main__produto img {
+.main__produto img
+{
     width: 400px;
-    height: 400px;
+    height: 90%;
 
     margin-right: 20px;
 
@@ -64,11 +73,12 @@ a {
     border-radius: 10px;
 }
 
-.main__produto-detalhes {
+.main__produto-detalhes
+{
     width: 500px;
-    height: 400px;
+    height: 100%;
 
-    margin-left: 20px;
+    margin: 20px;
 
     display: flex;
     flex-direction: column;
@@ -77,7 +87,8 @@ a {
 
 }
 
-.main__produto-detalhes-nome {
+.main__produto-detalhes-nome
+{
     width: 100%;
     height: 30%;
 
@@ -90,7 +101,8 @@ a {
     border-radius: 10px;
 }
 
-.main__produto-detalhes-descricao {
+.main__produto-detalhes-descricao
+{
     width: 100%;
     height: 60%;
 
@@ -103,18 +115,18 @@ a {
     border-radius: 10px;
 }
 
-.main__produto-compra {
+.main__produto-compra
+{
     width: 400px;
     height: 400px;
 
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
 }
 
-.main__produto-compra-comprar button,
-.main__produto-compra-termos button
+.main__produto-compra button
 {
     width: 200px;
     height: 100px;
@@ -126,7 +138,8 @@ a {
     border-radius: 10px;
 }
 
-.main__produto-compra-comprar button {
+.main__produto-compra button
+{
     color: var(--branco);
     background-color: transparent;
     border: 1px solid var(--verde_claro);
@@ -134,7 +147,8 @@ a {
     transition: 0.5s;
 }
 
-.main__produto-compra-comprar button:hover {
+.main__produto-compra button:hover
+{
     color: var(--preto);
     background-color: var(--verde_claro);
     border: 1px solid var(--branco);
@@ -142,26 +156,8 @@ a {
     scale: 1.1;
 }
 
-.main__produto-compra-termos button
+.main__comentario
 {
-    color: var(--branco);
-    background-color: transparent;
-    border: 1px solid var(--azul_claro);
-
-    transition: 0.5s;
-}
-
-.main__produto-compra-termos button:hover
-{
-    color: var(--preto);
-    background-color: var(--azul_claro);
-    border: 1px solid var(--branco);
-
-    scale: 1.1;
-}
-
-
-.main__comentario {
     width: 100%;
     height: 50%;
 
@@ -174,7 +170,8 @@ a {
 }
 
 .main__comentario-container,
-.main__chat-container {
+.main__chat-container
+{
     width: 800px;
     height: 400px;
 
@@ -190,7 +187,8 @@ a {
     border-radius: 10px;
 }
 
-.main__comentario-container-input {
+.main__comentario-container-input
+{
     width: 100%;
     height: 70%;
 
@@ -203,7 +201,8 @@ a {
     gap: 50px;
 }
 
-.main__comentario-container-input textarea {
+.main__comentario-container-input textarea
+{
     width: 50%;
 
     min-height: 40px;
@@ -214,7 +213,8 @@ a {
     border-radius: 10px;
 }
 
-.main__comentario-container-button {
+.main__comentario-container-button
+{
     width: 100%;
     height: 30%;
 
@@ -262,7 +262,8 @@ a {
     overflow-x: hidden;
 }
 
-.main__chat-container-usuario {
+.main__chat-container-usuario
+{
     width: 90%;
     height: 50px;
     min-height: 50px;
@@ -274,7 +275,8 @@ a {
 }
 
 
-.main__container-chat-comentario {
+.main__container-chat-comentario
+{
     width: 90%;
     height: 150px;
     min-height: 100px;
@@ -283,7 +285,8 @@ a {
 }
 
 
-.footer {
+.footer
+{
     width: 100%;
     height: 50px;
 
@@ -300,11 +303,13 @@ a {
     border-right: 0;
 }
 
-.footer span {
+.footer span
+{
     color: var(--branco);
 }
 
-.footer__social {
+.footer__social
+{
     width: 200px;
 
     display: flex;
@@ -312,6 +317,7 @@ a {
     gap: 20px;
 }
 
-.footer__social a {
+.footer__social a
+{
     font-size: 20px;
 }
