--- a/static/styles/style-pagina_busca.css
+++ b/static/styles/style-pagina_busca.css
@@ -1,3 +1,11 @@
+/* Formatando Tudo */
+*
+{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
 body
 {
     background-color: var(--preto);
@@ -8,8 +16,7 @@ main
 {
     width: 100%;
     height: 100vh;
-    color: #f8f8f8;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: var(--branco);
 }
 
 li
@@ -45,7 +52,7 @@ a
     text-align: center;
 
     background-color: var(--cinza_escuro);
-    border: 1px solid var(--cinza_claro);
+    border: 1px solid var(--roxo);
     border-radius: 12px;
 
     transition: 0.5s;
