--- a/templates/Pagina_apresentacao.html
+++ b/templates/Pagina_apresentacao.html
@@ -51,7 +51,7 @@
 
         <img src="" alt="">
         <a class="navbar-brand" href="/">ZCG Game Store</a>
-        <form class="d-flex" role="search">
+        <form class="d-flex" role="search" action="/buscar_jogos" method="GET">
             <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"/>
             <button class="btn btn-outline-success" type="submit"><i class="bi bi-search"></i></button>
         </form>
