--- a/templates/Pagina_comprar-produto.html
+++ b/templates/Pagina_comprar-produto.html
@@ -34,8 +34,8 @@
 
             <a class="navbar-brand" href="/">ZCG Game Store</a>
 
-            <form class="d-flex" role="search" action="/buscar_jogos" method="GET">
-                <input class="form-control me-2" type="search" placeholder="Pesquisar">
+            <form class="d-flex" role="search" action="/buscar_jogos" method="GET" id="form-busca"  >
+                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" name="q" />
                 <button class="btn btn-outline-success" type="submit"><i class="bi bi-search"></i></button>
             </form>
 
