--- a/static/styles/style-pagina_cadastrar.css
+++ b/static/styles/style-pagina_cadastrar.css
@@ -37,33 +37,29 @@ a
 
 .main
 {
-    width: 600px;
-    height: 600px;
+    width: 100%;
+    height: 100%;
+    min-height: 100vh;
 
-    margin: 150px auto;
-
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-
-    background-color: var(--cinza_escuro);
-    border: 1px solid var(--cinza_claro);
-    border-radius: 10px;
+    margin: 50px auto;
 }
 
 .main__cadastro-login
 {
     width: 500px;
-    height: 550px;
+    height: 600px;
 
-    margin:auto;
+    margin: auto;
 
     display: flex;
-    flex-direction:column;
+    flex-direction: column;
     align-items: center;
     gap: 20px;
-}
 
+    background-color: var(--cinza_escuro);
+    border: 1px solid var(--cinza_claro);
+    border-radius: 10px;
+}
 
 .main__cadastro-login-container
 {
@@ -85,6 +81,8 @@ a
 {
     width: 400px;
     height:400px;
+
+    margin-bottom: 20px;
 
     display: flex;
     flex-direction: column;
