--- a/static/styles/style-pagina_perfil_usuario.css
+++ b/static/styles/style-pagina_perfil_usuario.css
@@ -43,7 +43,8 @@ a
 .main
 {
     width: 90%;
-    height: 1000px;
+    height: 100%;
+    min-height: 100vh;
 
     display: flex;
     flex-direction: column;
