--- a/templates/Pagina_comprar-produto.html
+++ b/templates/Pagina_comprar-produto.html
@@ -26,9 +26,9 @@
                     <i class="bi bi-list"></i>
                 </button>
                 <ul class="dropdown-menu dropdown-menu-dark">
-                    <li><a class="dropdown-item active" href="/"><i class="bi bi-house-door-fill"></i> Início</a></li>
-                    <li><a class="dropdown-item" href="/categoria-jogos"><i class="bi bi-bookmark"></i> Categorias</a></li>
-                    <li><a class="dropdown-item" href="/apresentacao"><i class="bi bi-question-circle"></i> Sobre</a></li>
+                    <li><a class="dropdown-item active" href="/"><i class="bi bi-house-door-fill"></i></a></li>
+                    <li><a class="dropdown-item" href="/categoria-jogos"><i class="bi bi-bookmark"></i></a></li>
+                    <li><a class="dropdown-item" href="/apresentacao"><i class="bi bi-question-circle"></i></a></li>
                 </ul>
             </div>
 
